--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,12 @@
-<div>
-    <h1><a href="/">Django Blog</a></h1>
-</div>
-{{ post }}
-{% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
-    </div>
-{% endfor %}
+{% extends "blog/base.html" %}
+
+{% block content %}
+				{% for post in posts %}
+	    		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	        		<h1 class="post"><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+	        		<p class="meta">published: {{ post.published_date }}</p>
+	       		 	<p>{{ post.text|linebreaks }}</p>
+	    		</div>
+			{% endfor %}
+{% endblock content %}
+
