--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,11 +6,33 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static "css/style.css" %}" />
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
-		<body>
-		<div class="container" id="header">
-    		<h1 id="logo"><a href="/">Django Blog</a></h1>
-		</div>
+		<body class="imbody">
+			<div class="container-fluid" id="header">
+			<nav class="navbar navbar-default"  role ="navigation">
+    				<div class="navbar-header">
+    					<button type = "button" class = "navbar-toggle" 
+         					data-toggle = "collapse" data-target = "#django_bar">
+         					<span class = "sr-only">Toggle navigation</span>
+         					<span class = "icon-bar"></span>
+         					<span class = "icon-bar"></span>
+         					<span class = "icon-bar"></span>
+      					</button>
+    					<a class="navbar-brand" href="/">Django Blog</a>
+    				</div>
+    				<div class="collapse navbar-collapse" id="django-bar">
+	    				<ul class="nav navbar-nav navbar-right">
+	        				<li class="active"><a href="/">Home</a></li>
+	        				<li><a href="{% url "post_new" %}">Add Post<span class="glyphicon glyphicon-plus"></span></a></li>
+	        				<li><a href="#">Page 2</a></li> 
+	        				<li><a href="#">Page 3</a></li> 
+	      				</ul>
+	      			</div>
+      			
+    		</nav>
+    		</div>
 			<div class="container">
 			<div class="row">
 				 {% block content %}
