--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,14 +1,17 @@
-h1.post a{
-	text-decoration: none;
-	color:#000;
-	font-size:18px;
-	text-transform: uppercase;
-}
-h1.post{
+
+.post_title{
 	padding-bottom:10px;
 	margin-bottom:10px;
 	border-bottom:1px solid rgba(0,0,0,0.2)
 }
+a.post_title{
+	text-decoration: none;
+	color:#000;
+	font-size:18px;
+	text-transform: uppercase;
+	border:none;
+}
+
 h1{
 	margin:0
 }
@@ -25,8 +28,8 @@ h1#logo a{
 }
 #header{
 	background: rgba(150,164,252,0.6);
-	padding:20px 0;
-	margin-bottom:40px;
+	width:100%;
+	margin-bottom:20px;
 }
 p.meta{
 	padding-left:15px;
@@ -46,4 +49,23 @@ p.meta{
 .navbar{
 	
 	margin:0 !important;
+}
+label{
+	vertical-align:top;
+}
+.post p{
+	text-align: justify;
+	text-indent: 10px;
+}
+a span{
+	padding-left:15px;
+}
+.paddinzero{
+	padding:0;
+}
+textarea{
+	resize:none;
+}
+input,textarea{
+	width:80%;
 }
