--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,11 +10,12 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
 		<body class="imbody">
-			<div class="container-fluid" id="header">
-			<nav class="navbar navbar-default"  role ="navigation">
+			<div id="header">
+			<div class="container">
+				<nav class="navbar navbar-default"  role ="navigation">
     				<div class="navbar-header">
     					<button type = "button" class = "navbar-toggle" 
-         					data-toggle = "collapse" data-target = "#django_bar">
+         					data-toggle = "collapse" data-target = "#django-bar">
          					<span class = "sr-only">Toggle navigation</span>
          					<span class = "icon-bar"></span>
          					<span class = "icon-bar"></span>
@@ -24,14 +25,14 @@
     				</div>
     				<div class="collapse navbar-collapse" id="django-bar">
 	    				<ul class="nav navbar-nav navbar-right">
-	        				<li class="active"><a href="/">Home</a></li>
+	        				<li class="active"><a href="/">Home<span class="glyphicon glyphicon-home"></span></a></li>
 	        				<li><a href="{% url "post_new" %}">Add Post<span class="glyphicon glyphicon-plus"></span></a></li>
-	        				<li><a href="#">Page 2</a></li> 
-	        				<li><a href="#">Page 3</a></li> 
 	      				</ul>
 	      			</div>
       			
     		</nav>
+			</div>		
+			
     		</div>
 			<div class="container">
 			<div class="row">
