--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,15 +3,15 @@
 {% block content %}
     <div class="post">
      
-        <h1>{{ post.title }}</h1>
+        <h1 class="post_title">{{ post.title }}</h1>
            {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
         {% endif %}
-        <p>{{ post.text|linebreaks }}</p>
+        <p class="content">{{ post.text|linebreaks }}</p>
         {% if user.is_authenticated %}
-        	<a class="btn btn-default" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        	<a class="btn btn-default pull-right" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil paddinzero"></span></a>
     	{% endif %}
     </div>
 {% endblock %}
