--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,12 +1,15 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
+			<div class="post">
 				{% for post in posts %}
-	    		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	        		<h1 class="post"><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+	    		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 post">
+	        		<a class="post_title" href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a>
 	        		<p class="meta">published: {{ post.published_date }}</p>
 	       		 	<p>{{ post.text|linebreaks }}</p>
 	    		</div>
-			{% endfor %}
+				{% endfor %}
+			</div>
+				
 {% endblock content %}
 
