re implement phase 3

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,11 +8,13 @@
 			<div class="row">
 				<div class="post">
 					{% for post in object_list %}
-		    		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 post">
-		        		<a class="post_title" href="{% url "posts:post_detail" pk=post.pk %}">{{ post.title }}</a>
-		        		<p class="meta">published: {{ post.published_date }}</p>
-		       		 	<p>{{ post.text|linebreaks }}</p>
-		    		</div>
+						{% if user == post.author %}
+			    		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 post">
+			        		<a class="post_title" href="{% url "posts:post_detail" pk=post.pk %}">{{ post.title }}</a>
+			        		<p class="meta">published: {{ user }} {{ post.published_date }}</p>
+			       		 	<p>{{ post.text|linebreaks }}</p>
+			    		</div>
+						{% endif %}
 					{% endfor %}
 				</div>
 			</div>
