--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,14 @@
 	<head>
 		<title>Django Blog</title>
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
-		<link rel="stylesheet" href="{% static "bootstrap-theme.min.css" %}" />
+		<link rel="stylesheet" href="{% static "css/bootstrap-theme.min.css" %}" />
 		<link rel="stylesheet" href="{% static "css/style.css" %}" />
 		<script src="{% static "js/jquery-2.1.4.min.js" %}" ></script>
 		<script src="{% static "js/bootstrap.min.js" %}" ></script>
+		<style>
+		{% block styles %}
+		{% endblock %}
+		</style>
 	</head>
 		<body class="imbody">
 			<div id="header">
@@ -18,7 +22,14 @@
     		</div>
 
 				 {% block content %}
-            	{% endblock %}
+        	{% endblock %}
 
 	</body>
+	<script type='text/javascript'>
+		$(document).ready(function(){
+			{% block jquery %}
+
+			{% endblock %}
+		});
+	</script>
 </html>
