--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,26 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+{% block styles %}
+#header{
+  margin:0;
+}
+img#banner{
+  width:100%;
+  height:357px;
+}
+
+{% endblock %}
 {% block content %}
+<div class="container-fluid">
+  <div class="row">
+    <img src="{% static "images/bannerback.jpg" %}" id="banner"/>
+  </div>
+</div>
 <div class="container">
   <div class="row">
-    
+    {% if user.is_active %}
+      <h2> Welcome, {{ user }} </h2>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
