--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -7,17 +7,17 @@
           <span class = "icon-bar"></span>
           <span class = "icon-bar"></span>
         </button>
-      <a class="navbar-brand" href="/"><span class="glyphicons glyphicons-glyphicons-road"></span>Django Blog</a>
+      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-indent-left" style="padding-right:15px;"></span>Django Blog</a>
     </div>
     <div class="collapse navbar-collapse" id="django-bar">
       <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="/">Home<span class="glyphicon glyphicon-home"></span></a></li>
           <li><a href="/blog/">Blog<span class="glyphicon glyphicon-book"></span></a></li>
-          <li><a href="{% url "posts:post_new" %}">Add Post<span class="glyphicon glyphicon-plus"></span></a></li>
           {% if user.is_authenticated %}
-            <li><a href="{% url "user:logout" %}">Logout<span class="glyphicon glyphicon-user"></span></a></li>
+          <li><a href="{% url "posts:post_new" %}">Add Post<span class="glyphicon glyphicon-plus"></span></a></li>
+          <li><a href="{% url "user:logout" %}">Logout<span class="glyphicon glyphicon-user"></span></a></li>
           {% else %}
-            <li><a href="{% url "user:login" %}">Login<span class="glyphicon glyphicon-user"></span></a></li>
+          <li><a href="{% url "user:login" %}">Login<span class="glyphicon glyphicon-user"></span></a></li>
           {% endif %}
         </ul>
       </div>
