--- a/user_mgt/templates/login.html
+++ b/user_mgt/templates/login.html
@@ -4,10 +4,10 @@
     <div class="row">
 
 <form action="" method="post" name="form" role="form">{% csrf_token %}
-		
+
             <div class="form-group">
               <div class="cols-lg-4 cols-md-4 cols-sm-4">
-		
+
 		<input type="text" name="username" value="{{ username}}" placeholder="Enter Your username" /><br />
 		</div>
 		</div>
@@ -15,9 +15,9 @@
               <div class="cols-lg-4 cols-md-4 cols-sm-4">
 		<input type="password" name="password" value="" placeholder="Enter Your Password" /><br />
          	</div></div>
-		
 
-		<input type="submit" class="btn btn-success" value="Log In" />
+
+		<input type="submit" class="btn" value="Log In" />
 		</div>
 	</form>
 {% endblock %}
