re implement phase 6

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -55,6 +55,7 @@
 			jsonpCallback: 'searchResult'
     });
 		function searchResult(data) {
+			alert(data);
     	$( "#q" ).autocomplete ({
         	source: data
     	});
