--- a/user_mgt/templates/login.html
+++ b/user_mgt/templates/login.html
@@ -12,11 +12,10 @@
 		</div>
 		</div>
 		<div class="form-group">
-              <div class="cols-lg-4 cols-md-4 cols-sm-4">
-		<input type="password" name="password" value="" placeholder="Enter Your Password" /><br />
-         	</div></div>
-
-
+          <div class="cols-lg-4 cols-md-4 cols-sm-4">
+		                <input type="password" name="password" value="" placeholder="Enter Your Password" /><br />
+         	</div>
+    </div>
 		<input type="submit" class="btn" value="Log In" />
 		</div>
 	</form>
