--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,10 @@ a span{
 textarea{
 	resize:none;
 }
+input[type="text"],input[type="password"]{
+	height:40px;
+	padding-left:15px;
+}
 input,textarea{
 	width:80%;
 }
