--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <nav class="navbar navbar-default"  role ="navigation">
     <div class="navbar-header">
       <button type = "button" class = "navbar-toggle"
